--- a/cv.html
+++ b/cv.html
@@ -2557,9 +2557,9 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
        <div class="year">
          <h4>2022</h4>
        </div><div class="title">
-       <h4>&emsp;<a href="../teatroespanolaparis2022.html">dramaTOURgia: un viaje teatral a trav&eacute;s de Espa&ntilde;a</a></h4></div>
+       <h4>&emsp;<a href="../teatroespanolaparis2022.html">dramaTOURgia: un viaje teatral a trav&eacute;s de Espa&ntilde;a</a><span style="float:right;"><a href="../teatroespanolaparis2022.html">Website</a></span></h4></div>
          <div class="property">Description:</div><div class="value">End-of-course representation showcasing scenes worked during the course <i>Teatro Espa&ntilde;ol &agrave; Paris</i></div>
-         <div class="property">Instructor:</div><div class="value">Luz&iacute;a Eviza</div>
+         <div class="property">Director:</div><div class="value">Luz&iacute;a Eviza</div>
          <div class="property">Venue:</div><div class="value"><a href="https://www.comedieoberkampf.com/">Com&eacute;die Oberkampf</a></div>
          <div class="property">Location:</div><div class="value">Paris, France</div>
          <div class="property">Date:</div><div class="value">30th of June of 2022</div>
