--- a/cv_es.html
+++ b/cv_es.html
@@ -526,7 +526,7 @@
 
       <br/><div class="cv">
        <div class="year"></div><div class="paper"><h4>&emsp;Probabilistic bounds on best rank-one approximation ratio<a class="btn btn-arxiv" href="https://arxiv.org/abs/2201.02191" role="button">arXiv:2201.02191</a></h4></div>
-       <div class="pretalktitle"></div><div class="collaborator">(Junto a <a href="https://www.mathematik.uni-osnabrueck.de/forschung/ag_angewandte_algebra_und_datenanalyse/kozhasov_khazhgali.html">Khazhgali Kozhasov</a>)</div>
+       <div class="pretalktitle"></div><div class="collaborator">(Junto a <a href="https://www.mathematik.uni-osnabrueck.de/forschung/ag_angewandte_algebra_und_Fechananalyse/kozhasov_khazhgali.html">Khazhgali Kozhasov</a>)</div>
       </div>
 
       <br/><div class="cv">
@@ -994,7 +994,10 @@
 
       <br/><div class="row"><div class="col-md-12">
       <h3>Otras</h3>
-      </div></div>
+    </div></div>
+
+       <!-- 2021
+            YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
       <br/><div class="cv">
       <div class="year"><h4>2021</h4></div><div class="title"><h4>&emsp;<a href="https://sites.google.com/view/aatrn-tutorial-a-thon">Tutorial-a-thon de la Applied Algebraic Topology Network</a></h4></div>
@@ -2651,6 +2654,29 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
       <!-- 2022
            YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+         <span id="teatroespanolaparis_espectaculo"></span>
+         <br/><div class="cv">
+         <div class="year">
+           <h4>2022</h4>
+         </div><div class="title">
+         <h4>&emsp;<a href="../teatroespanolaparis2022.html">dramaTOURgia: un viaje teatral a trav&eacute;s de Espa&ntilde;a</a><span style="float:right;"><a href="../teatroespanolaparis2022.html">P&aacute;gina Web</a></span></h4></div>
+           <div class="property">Descripci&oacute;n:</div><div class="value">Representación de final de curso de <i>Teatro Espa&ntilde;ol &agrave; Paris</i> con las escenas trabajadas durante el a&ntilde;o</div>
+           <div class="property">Directora:</div><div class="value">Luz&iacute;a Eviza</div>
+           <div class="property">Local:</div><div class="value"><a href="https://www.comedieoberkampf.com/">Com&eacute;die Oberkampf</a></div>
+           <div class="property">Lugar:</div><div class="value">Par&iacute;s, Francia</div>
+           <div class="property">Fecha:</div><div class="value">30 de junio del 2022</div>
+         </div>
+
+          <span id="teatroespanolaparis"></span>
+          <br/><div class="cv">
+          <div class="year"></div><div class="title">
+          <h4>&emsp;<a href="https://www.facebook.com/teatroespanolaparis">Teatro Espa&ntilde;ol &agrave; Paris</a></h4></div>
+            <div class="property">Descripci&oacute;n:</div><div class="value">Clases semanales de teatro en español</div>
+            <div class="property">Instructora:</div><div class="value">Luz&iacute;a Eviza</div>
+            <div class="property">Lugar:</div><div class="value">Par&iacute;s, Francia</div>
+            <div class="property">Fecha:</div><div class="value">octubre de 2020-junio de 2022</div>
+          </div>
 
            <span id="articMSCA2022"></span>
            <br/><div class="cv">
