--- a/cv.html
+++ b/cv.html
@@ -948,7 +948,7 @@
 
       <br/><div class="cv">
       <div class="year"><h4>2022</h4></div><div class="title"><h4>&emsp;<a href="#ISSAC2022">47th International Symposium on Symbolic and Algebraic Computations (ISSAC'22)</a></h4></div>
-        <div class="pretalktitle"></div><div class="talktitle">Ultrametric Smale's $\alpha$-theory<span style="float:right;"><a href="pdf/ISSAC2022_poster.pdf">Poster</a></span></div>
+        <div class="pretalktitle"></div><div class="talktitle">Ultrametric Smale's <span style="font-variant:normal;">$\alpha$</span>-theory<span style="float:right;"><a href="pdf/ISSAC22_poster.pdf">Poster</a></span></div>
       </div>
 
       <br/><div class="cv">
