--- a/cv_es.html
+++ b/cv_es.html
@@ -943,7 +943,7 @@
 
       <br/><div class="cv">
       <div class="year"><h4>2022</h4></div><div class="title"><h4>&emsp;<a href="#ISSAC2022">47th International Symposium on Symbolic and Algebraic Computations (ISSAC'22)</a></h4></div>
-        <div class="pretalktitle"></div><div class="talktitle">Ultrametric Smale's $\alpha$-theory<span style="float:right;"><a href="pdf/ISSAC2022_poster.pdf">P&oacute;ster</a></span></div>
+        <div class="pretalktitle"></div><div class="talktitle">Ultrametric Smale's <span style="font-variant:normal;">$\alpha$</span>-theory<span style="float:right;"><a href="pdf/ISSAC22_poster.pdf">P&oacute;ster</a></span></div>
       </div>
 
       <br/><div class="cv">
@@ -2680,9 +2680,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
            <span id="articMSCA2022"></span>
            <br/><div class="cv">
-           <div class="year">
-           <h4>2022</h4>
-           </div><div class="title">
+           <div class="year"></div><div class="title">
            <h4>&emsp;<a href="https://uit.no/project/arcticmsca">Arctic MSCA Symposium</a></h4></div>
            <div class="year"></div><div class="title">
            <h4>&ensp;&emsp;<em>(Simposio &aacute;rtico de la MSCA)</em></h4></div>
