--- a/cv.html
+++ b/cv.html
@@ -818,8 +818,19 @@
       <h3>Invited seminar talks</h3>
       </div></div>
 
+
+
       <br/><div class="cv">
-      <div class="year"><h4>2022</h4></div><div class="title"><h4>&emsp;<a href="https://indico.math.cnrs.fr/category/40/">S&eacute;minaire Calcul Formel at XLIM</a></h4></div>
+      <div class="year"><h4>2022</h4></div><div class="title"><h4>&emsp;<a href="https://www.minds.jhu.edu/event/minds-cis-fall-seminar-series-josue-tonelli-cueto/?instance_id=577">MINDS &#38; CIS Fall Seminar Series</a><span style="float:right;"><a href="pdf/22MINDSseminartalk_slides.pdf">Slides</a></span></h4></div>
+       <div class="pretalktitle"></div><div class="talktitle">Condition Numbers and Probability for Explaining Algorithms in Computational Geometry</div>
+        <div class="property">Institution:</div><div class="value"><a href="https://www.minds.jhu.edu/">MINDS</a> at <a href="https://www.jhu.edu/">John Hopkins University</a></div>
+        <div class="property"></div><div class="value"><a href="https://www.cis.jhu.edu/">CIS</a> at <a href="https://www.jhu.edu/">John Hopkins University</a></div>
+        <div class="property">Location:</div><div class="value">Baltimore, USA</div>
+        <div class="property">Date:</div><div class="value">6th of September of 2022</div>
+      </div>
+
+      <br/><div class="cv">
+      <div class="year"></div><div class="title"><h4>&emsp;<a href="https://indico.math.cnrs.fr/category/40/">S&eacute;minaire Calcul Formel at XLIM</a></h4></div>
        <div class="pretalktitle"></div><div class="talktitle">A $p$-adic Descartes solver: the Strassman solver</div>
         <div class="property">Institution:</div><div class="value"><a href="https://www.xlim.fr/">Institut de Recherche XLIM</a></div>
         <div class="property">Location:</div><div class="value">Limoges, France</div>
