--- a/cv_es.html
+++ b/cv_es.html
@@ -812,7 +812,17 @@
       </div></div>
 
       <br/><div class="cv">
-      <div class="year"><h4>2022</h4></div><div class="title"><h4>&emsp;<a href="https://indico.math.cnrs.fr/category/40/">S&eacute;minaire Calcul Formel at XLIM</a></h4></div>
+      <div class="year"><h4>2022</h4></div><div class="title"><h4>&emsp;<a href="https://www.minds.jhu.edu/event/minds-cis-fall-seminar-series-josue-tonelli-cueto/?instance_id=577">MINDS &#38; CIS Fall Seminar Series</a><span style="float:right;"><a href="pdf/22MINDSseminartalk_slides.pdf">Diapositivas</a></span></h4></div>
+      <div class="year"></div><div class="title"><h4>&emsp;&ensp;<em>(Serie de Seminarios del MINDS y el CIS)</em></h4></div>
+       <div class="pretalktitle"></div><div class="talktitle">Condition Numbers and Probability for Explaining Algorithms in Computational Geometry</div>
+        <div class="property">Instituci&oacute;n:</div><div class="value"><a href="https://www.minds.jhu.edu/">MINDS</a> en <a href="https://www.jhu.edu/">John Hopkins University</a></div>
+        <div class="property"></div><div class="value"><a href="https://www.cis.jhu.edu/">CIS</a> en <a href="https://www.jhu.edu/">John Hopkins University</a></div>
+        <div class="property">Lugar:</div><div class="value">Baltimore, EEUU</div>
+        <div class="property">Date:</div><div class="value">6 de setiembre del 2022</div>
+      </div>
+
+      <br/><div class="cv">
+      <div class="year"></div><div class="title"><h4>&emsp;<a href="https://indico.math.cnrs.fr/category/40/">S&eacute;minaire Calcul Formel at XLIM</a></h4></div>
       <div class="year"></div><div class="title"><h4>&emsp;&ensp;<em>(Seminario de Computaci&oacute;n Simb&oacute;lica en XLIM)</em></h4></div>
        <div class="pretalktitle"></div><div class="talktitle">A $p$-adic Descartes solver: the Strassman solver</div>
         <div class="property">Instituci&oacute;n:</div><div class="value"><a href="https://www.xlim.fr/">Institut de Recherche XLIM</a></div>
