--- a/cv.html
+++ b/cv.html
@@ -1400,7 +1400,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
        <div class="year">
        <h4>2022</h4>
        </div><div class="title">
-       <h4>&emsp;<a href="https://go.ivoox.com/rf/86768659">Radio Interview<br/>&ldquo;Sistemas de ecuaciones, &iquest;c&oacute;mo resolverlas?&rdquo;</a><span style="float:right;"><a href="https://go.ivoox.com/rf/86768659">Recording</a></span></h4></div>
+       <h4>&emsp;<a href="https://go.ivoox.com/rf/86768659">Radio Interview &ldquo;Sistemas de ecuaciones, &iquest;c&oacute;mo resolverlas?&rdquo;</a><span style="float:right;"><a href="https://go.ivoox.com/rf/86768659">Recording</a></span></h4></div>
         <div class="property">Interviewer:</div><div class="value"><a href="https://www.antonioarmas.com/">Antonio G. Armas</a></div>
         <div class="property">Language:</div><div class="value">Spanish</div>
         <div class="property">Program:</div><div class="value"><a href="https://www.investigadoresporelmundo.com/">Investigadores por el Mundo (number 159)</a></div>
@@ -1499,6 +1499,27 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
       <!-- 2012
          YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
+
+    <!-- Blog Posts
+        ================================================== -->
+
+         <br/><div class="row"><div class="col-md-12">
+         <h3>Posts at my blog <span><a href="https://illsaidthoughts.xyz/" style="font-size:inherit;">Ill-said Thoughts</a></span><a class="btn btn-blog" href="https://illsaidthoughts.xyz/"  role="button">Open Blog</a></h3>
+         </div></div>
+
+         <br/><div class="cv">
+         <div class="year"><h4>2022</h4></div><div class="paper"><h4>&emsp;Emmy Noether, alphabetic portrait<a class="btn btn-blog" href="https://illsaidthoughts.xyz/emmynoetheralphabeticportrait/"  role="button">Read Post</a></h4></div>
+         </div>
+         <div class="cv">
+         <div class="year"></div><div class="paper"><h4>&emsp;Otra paradoja probabil&iacute;stica del infinito [Spanish]<a class="btn btn-blog" href="https://illsaidthoughts.xyz/otraparadojaprobabilisticadelinfinito/"  role="button">Leer Post</a></h4></div>
+         </div>
+         <div class="cv">
+         <div class="year"></div><div class="paper"><h4>&emsp;Topolog&iacute;a Bilba&iacute;na [Spanish]<a class="btn btn-blog" href="https://illsaidthoughts.xyz//topologiabilbaina/"  role="button">Leer Post</a></h4></div>
+         </div>
+         <div class="cv">
+         <div class="year"></div><div class="paper"><h4>&emsp;Homotop&iacute;as en Venezia [Spanish]<a class="btn btn-blog" href="https://illsaidthoughts.xyz/homotopiasenvenezia/"  role="button">Leer Post</a></h4></div>
+         </div>
+
 
 
     <!-- FORMATIVE ACTIVITIES
@@ -1879,7 +1900,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 </div><div class="title">
 <h4>&emsp;<a href="http://www.mca2021.org/en/">Mathematical Congress of the Americas 2021</a></h4></div>
   <div class="property">Organizer:</div><div class="value"><a href="http://www.mcofamericas.org/">Mathematical Council of the Americas (MCofA)</a></div>
-  <div class="property">Hosting Institution:</div><div class="value"><a href="http://www.uba.ar/">University of Buenaos Aires</a></div>
+  <div class="property">Hosting Institution:</div><div class="value"><a href="http://www.uba.ar/">University of Buenos Aires</a></div>
   <div class="property">Location:</div><div class="value">Buenos Aires, Argentina (On-line due to COVID-19)</div>
   <div class="property">Date:</div><div class="value">19th to 24th of July of 2021</div>
 </div>
@@ -1890,7 +1911,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
 </div><div class="title">
 <h4>&emsp;<a href="https://puremath.no/mega2021/">MEGA 2021: Effective Methods in Algebraic Geometry</a></h4></div>
-  <div class="property">Organizer:</div><div class="value"><div class="value">MEGA Executive Committee</div>
+  <div class="property">Organizer:</div><div class="value">MEGA Executive Committee</div>
   <div class="property"></div><div class="value">MEGA Organizing Committee</div>
   <div class="property">Hosting Institution:</div><div class="value"><a href="https://en.uit.no/">UiT – The Arctic University of Norway</a></div>
   <div class="property">Location:</div><div class="value">Troms&oslash;, Norway (On-line due to COVID-19)</div>
