--- a/cv_es.html
+++ b/cv_es.html
@@ -1523,6 +1523,26 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
       <!-- 2012
          YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
+         <!-- Blog Posts
+            ================================================== -->
+
+         <br/><div class="row"><div class="col-md-12">
+         <h3>Posts en mi blog <span><a href="https://illsaidthoughts.xyz/" style="font-size:inherit;">Ill-said Thoughts</a></span><a class="btn btn-blog" href="https://illsaidthoughts.xyz/"  role="button">Abrir Blog</a></h3>
+         </div></div>
+
+         <br/><div class="cv">
+         <div class="year"><h4>2022</h4></div><div class="paper"><h4>&emsp;Emmy Noether, alphabetic portrait [Ingl&eacute;s]<a class="btn btn-blog" href="https://illsaidthoughts.xyz/emmynoetheralphabeticportrait/"  role="button">Read Post</a></h4></div>
+         </div>
+         <div class="cv">
+         <div class="year"></div><div class="paper"><h4>&emsp;Otra paradoja probabil&iacute;stica del infinito<a class="btn btn-blog" href="https://illsaidthoughts.xyz/otraparadojaprobabilisticadelinfinito/"  role="button">Leer Post</a></h4></div>
+         </div>
+         <div class="cv">
+         <div class="year"></div><div class="paper"><h4>&emsp;Topolog&iacute;a Bilba&iacute;na<a class="btn btn-blog" href="https://illsaidthoughts.xyz//topologiabilbaina/"  role="button">Leer Post</a></h4></div>
+         </div>
+         <div class="cv">
+         <div class="year"></div><div class="paper"><h4>&emsp;Homotop&iacute;as en Venezia<a class="btn btn-blog" href="https://illsaidthoughts.xyz/homotopiasenvenezia/"  role="button">Leer Post</a></h4></div>
+         </div>
+
   <!-- FORMATIVE ACTIVITIES
       ================================================== -->
 
@@ -1917,7 +1937,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 <div class="year"></div><div class="title">
 <h4>&ensp;&emsp;<em>(Congreso Matem&aacute;tico de las Am&eacute;ricas 2021)</em></h4></div>
   <div class="property">Organizador:</div><div class="value"><a href="http://www.mcofamericas.org/">Mathematical Council of the Americas (MCofA)</a></div>
-  <div class="property">Instituci&oacute;n anfitriona:</div><div class="value"><a href="http://www.uba.ar/">Universidad de Buenaos Aires</a></div>
+  <div class="property">Instituci&oacute;n anfitriona:</div><div class="value"><a href="http://www.uba.ar/">Universidad de Buenos Aires</a></div>
   <div class="property">Lugar:</div><div class="value">Buenos Aires, Argentina (On-line por la COVID-19)</div>
   <div class="property">Fecha:</div><div class="value">del 19 al 24 de julio del 2021</div>
 </div>
@@ -1930,7 +1950,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 <h4>&emsp;<a href="https://puremath.no/mega2021/">MEGA 2021: Effective Methods in Algebraic Geometry</a></h4></div>
 <div class="year"></div><div class="title">
 <h4>&ensp;&emsp;<em>(MEGA2021: M&eacute;todos Efectivos en Geometr&iacute;a Algebraica)</em></h4></div>
-  <div class="property">Organizador:</div><div class="value"><div class="value">MEGA Executive Committee</div>
+  <div class="property">Organizador:</div><div class="value">MEGA Executive Committee</div>
   <div class="property"></div><div class="value">MEGA Organizing Committee</div>
   <div class="property">Instituci&oacute;n anfitriona:</div><div class="value"><a href="https://en.uit.no/">UiT – The Arctic University of Norway</a></div>
   <div class="property">Lugar:</div><div class="value">Troms&oslash;, Noruega (On-line por la COVID-19)</div>
