--- a/cv.html
+++ b/cv.html
@@ -1479,7 +1479,7 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
             YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
 
             <br/><div class="cv">
-            <div class="year"><h4>2021</h4></div><div class="paper"><h4>&emsp;Semi... &iquest;qu&eacute;?<br/>&emsp;Las m&uacute;ltiples formas de lo semialgebraico y c&oacute;mo determinarlas<a class="btn btn-pikasle" style="width:15%;" href="http://doi.org/10.5281/zenodo.4718329"  role="button">Article</a></h4></div>
+            <div class="year"><h4>2021</h4></div><div class="paper"><h4>&emsp;Semi... &iquest;qu&eacute;?<br/>&emsp;Las m&uacute;ltiples formas de lo semialgebraico y c&oacute;mo determinarlas<a class="btn btn-pikasle" href="http://doi.org/10.5281/zenodo.4718329"  role="button">Article</a></h4></div>
             <div class="pretalktitle"></div><div class="collaborator">J. Tonelli-Cueto. Semi... &iquest;qu&eacute;? Las m&uacute;ltiples formas de lo semialgebraico y c&oacute;mo determinarlas (Spanish) [Semi... what? The multiple shapes of the semialgebraic and how to determine them]. In <i>Libro de Res&uacute;menes de Divulga NextGen I (26, 27 y 28 de Mayo de 2021)</i>, pages 42-43. Zenodo, 2021. <span><a href="http://doi.org/10.5281/zenodo.4718329">DOI 10.5281/zenodo.4718329</a></span></div>
             </div>
 
