non-research update

--- a/cv.html
+++ b/cv.html
@@ -2951,6 +2951,10 @@ YYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYYY -->
     for (i = 0; i < x.length; i++) {
      x[i].style="width:100%;";
     }
+    x = document.getElementsByClassName("btn btn-blog");
+    for (i = 0; i < x.length; i++) {
+     x[i].style="width:100%;";
+    }
     x = document.getElementsByClassName("year");
     for (i = 0; i < x.length; i++) {
      if (!(x[i].innerHTML === "")){
