--- a/non-research.html
+++ b/non-research.html
@@ -254,45 +254,47 @@
   <hr>
   <div id="misc">
     <h2 class="display-4">Miscellanea</h2>
-    <p>
-      The following list contains some mathematical writtings that might be of interest to the visitor.
-    </p>
+
+    <br/><h3>Mathematical Writtings</h3>
+    <br/><div class="cv">
+    <div class="year"><h4>2015</h4></div><div class="paper"><h4>&emsp;Symmetric extensions of polytopes<a class="btn btn-manuscript" href="pdf/symmetric_extension_polytopes.pdf"  role="button">Manuscript</a></h4></div>
+    <div class="year"></div><div class="paper">J. Tonelli-Cueto. <em>Symmetric extensions of polytopes</em>. Manuscript, 2015.</div>
+    </div>
+    <br/><div class="cv">
+    <div class="year"><h4>2012</h4></div><div class="paper"><h4>&emsp;Torres de Hanoi<a class="btn btn-manuscript" href="pdf/torres_hanoi.pdf"  role="button">Manuscript</a></h4></div>
+    <div class="year"></div><div class="paper">A. Gil Lerchundi, E. Landa Cilleros, O. Ruiz Delgado, and J. Tonelli-Cueto. <em>Torres de Hanoi (Spanish) [Hanoi Towers]</em>. Manuscript, 2012.</div>
+    </div>
     <br/><div class="cv">
     <div class="year"></div><div class="paper"><h4>&emsp;Demostrando el Teorema de la Curva de Jordan<a class="btn btn-manuscript" href="pdf/teorema_curva_jordan.pdf"  role="button">Manuscript</a></h4></div>
     <div class="year"></div><div class="paper">J. Tonelli-Cueto. <em>Demostrando el Teorema de la Curva de Jordan (Spanish) [Proving the Jordan Curve Theorem]</em>. Manuscript, 2012.</div>
     </div>
     <br/><div class="cv">
-    <div class="year"></div><div class="paper"><h4>&emsp;Symmetric extensions of polytopes<a class="btn btn-manuscript" href="pdf/symmetric_extension_polytopes.pdf"  role="button">Manuscript</a></h4></div>
-    <div class="year"></div><div class="paper">J. Tonelli-Cueto. <em>Symmetric extensions of polytopes</em>. Manuscript, 2015.</div>
-    </div>
-    <br/><div class="cv">
-    <div class="year"></div><div class="paper"><h4>&emsp;Torres de Hanoi<a class="btn btn-manuscript" href="pdf/torres_hanoi.pdf"  role="button">Manuscript</a></h4></div>
-    <div class="year"></div><div class="paper">A. Gil Lerchundi, E. Landa Cilleros, O. Ruiz Delgado, and J. Tonelli-Cueto. <em>Torres de Hanoi (Spanish) [Hanoi Towers]</em>. Manuscript, 2012.</div>
-    </div>
-    <br/><div class="cv">
     <div class="year"></div><div class="paper"><h4>&emsp;Una aplicaci&oacute;n de la matrices de Householder a la geometr&iacute;a<a class="btn btn-manuscript" href="pdf/aplicacion_householder_geometria.pdf"  role="button">Manuscript</a></h4></div>
     <div class="year"></div><div class="paper">J. Tonelli-Cueto. <em>Una aplicaci&oacute;n de la matrices de Householder a la geometr&iacute;a (Spanish) [An application of Householder matrices to geometry]</em>. Manuscript, 2012.</div>
     </div>
-    <br/>
-    <p>
-      The following list contains some non-mathematical writtings that might be of interest to the visitor.
-    </p>
     <br/><div class="cv">
-    <div class="year"></div><div class="paper"><h4>&emsp;Selfinitions<a class="btn btn-manuscript" href="pdf/Selfinitions.pdf"  role="button">Calligrams</a></h4></div>
+    <div class="year"><h4>2011</h4></div><div class="paper"><h4>&emsp;Matriz exponencial y ecuaciones diferenciales<a class="btn btn-manuscript" href="pdf/exponencial_matriz.pdf"  role="button">Manuscrito</a></h4></div>
+    <div class="year"></div><div class="paper">A. Gil Lertxundi, and J. Tonelli-Cueto. <em>Matriz exponencial y ecuaciones diferenciales (Spanish) [Matrix exponential and differential equations]</em>. Manuscrito, 2011.</div>
+    </div>
+
+    <br/><h3>Literary Writtings</h3>
+    <br/><div class="cv">
+    <div class="year"><h4>2018</h4></div><div class="paper"><h4>&emsp;Selfinitions<a class="btn btn-manuscript" href="pdf/Selfinitions.pdf"  role="button">Calligrams</a></h4></div>
     <div class="year"></div><div class="paper">I. Maesman. <em>Selfinitions</em>. Calligrams, 2018.</div>
     </div>
     <br/><div class="cv">
-    <div class="year"></div><div class="paper"><h4>&emsp;¡ROMPEDLAS!<a class="btn btn-manuscript" href="pdf/Rompedlas.pdf"  role="button">Poem</a></h4></div>
-    <div class="year"></div><div class="paper">I. Maesman. <em>¡ROMPEDLAS! (Spanish) [BREAK THEM!]</em>. Poem, 2012. With translation.</div>
-    </div>
-    <br/><div class="cv">
-    <div class="year"></div><div class="paper"><h4>&emsp;Routine<a class="btn btn-manuscript" href="pdf/Routine.pdf"  role="button">Story</a></h4></div>
+    <div class="year"><h4>2014</h4></div><div class="paper"><h4>&emsp;Routine<a class="btn btn-manuscript" href="pdf/Routine.pdf"  role="button">Story</a></h4></div>
     <div class="year"></div><div class="paper">I. Maesman. <em>Routine</em>. Story, 2014.</div>
     </div>
     <br/><div class="cv">
     <div class="year"></div><div class="paper"><h4>&emsp;Girl in cold<a class="btn btn-manuscript" href="pdf/girl_in_cold.pdf"  role="button">Story</a></h4></div>
     <div class="year"></div><div class="paper">I. Maesman. <em>Girl in cold</em>. Story, 2014.</div>
     </div>
+    <br/><div class="cv">
+    <div class="year"><h4>2012</h4></div><div class="paper"><h4>&emsp;¡ROMPEDLAS!<a class="btn btn-manuscript" href="pdf/Rompedlas.pdf"  role="button">Poem</a></h4></div>
+    <div class="year"></div><div class="paper">I. Maesman. <em>¡ROMPEDLAS! (Spanish) [BREAK THEM!]</em>. Poem, 2012. With translation.</div>
+    </div>
+
 
   </div>
 
@@ -326,6 +328,10 @@
        x[i].style="font-size:1em;font-weight:bold;";
       }
     x = document.getElementsByClassName("btn btn-pikasle");
+    for (i = 0; i < x.length; i++) {
+     x[i].style="width:100%;";
+    }
+    x = document.getElementsByClassName("btn btn-blog");
     for (i = 0; i < x.length; i++) {
      x[i].style="width:100%;";
     }
