--- a/non-research_es.html
+++ b/non-research_es.html
@@ -199,7 +199,7 @@
     <div class="year"></div><div class="paper"><h4>&emsp;Homotop&iacute;as en Venezia<a class="btn btn-blog" href="https://illsaidthoughts.xyz/homotopiasenvenezia/"  role="button">Leer Post</a></h4></div>
     </div>
 
-    <br/><h3>Magazine \(\pi kasle\) (2011-2014)<a class="btn btn-pikasle" href="https://pikasle.com/pikasle_es.html" role="button" style="width:22em;">Informaci&oacute;n detallada, contenido y n&uacute;meros</a></h3>
+    <br/><h3>Revista \(\pi kasle\) (2011-2014)<a class="btn btn-pikasle" href="https://pikasle.com/pikasle_es.html" role="button" style="width:22em;">Informaci&oacute;n detallada, contenido y n&uacute;meros</a></h3>
     <p>
       Durante mi periodo como editor (junto a <a href="http://math.mit.edu/~rgi/">Ricardo Grande</a>) de la revista $\pi kasle$, (co)escrib&iacute; 16 art&iacute;culos, de los cuales 9 fueron entrevistas, y dise&ntilde;&eacute; las primeras nueve portadas. Debajo, una lista con una selecci&oacute;n de mis art&iacute;culos en $\pi kasle$. Para la lista completa de art&iacute;culos, v&eacute;ase <a href="https://pikasle.com/pikasle_es.html#listaarticulos">la p&aacute;gina web de descripci&oacute;n de $\pi kasle$</a>. Para las p&oacute;rtadas, v&eacute;ase <a href="multimedia_es.html#pikaslecovers">Multimedia</a> o <a href="https://pikasle.com/pikasle_es.html#numeros">la p&aacute;gina web de descripci&oacute;n de $\pi kasle$</a>.
     </p>
@@ -254,45 +254,47 @@
   <hr>
   <div id="misc">
     <h2 class="display-4">Miscel&aacute;nea</h2>
-    <p>
-      La siguiente lista contiene algunos escritos matem&aacute;ticos que pueden ser de inter&eacute;s para le visitante.
-    </p>
+
+    <br/><h3>Escritos matem&aacute;ticos</h3>
+    <br/><div class="cv">
+    <div class="year"><h4>2015</h4></div><div class="paper"><h4>&emsp;Symmetric extensions of polytopes<a class="btn btn-manuscript" href="pdf/symmetric_extension_polytopes.pdf"  role="button">Manuscrito</a></h4></div>
+    <div class="year"></div><div class="paper">J. Tonelli-Cueto. <em>Symmetric extensions of polytopes (Ingl&eacute;s) [Extensiones sim&eacute;tricas de politopos]</em>. Manuscrito, 2015.</div>
+    </div>
+    <br/><div class="cv">
+    <div class="year"><h4>2012</h4></div><div class="paper"><h4>&emsp;Torres de Hanoi<a class="btn btn-manuscript" href="pdf/torres_hanoi.pdf"  role="button">Manuscrito</a></h4></div>
+    <div class="year"></div><div class="paper">A. Gil Lerchundi, E. Landa Cilleros, O. Ruiz Delgado, y J. Tonelli-Cueto. <em>Torres de Hanoi</em>. Manuscrito, 2012.</div>
+    </div>
     <br/><div class="cv">
     <div class="year"></div><div class="paper"><h4>&emsp;Demostrando el Teorema de la Curva de Jordan<a class="btn btn-manuscript" href="pdf/teorema_curva_jordan.pdf"  role="button">Manuscrito</a></h4></div>
     <div class="year"></div><div class="paper">J. Tonelli-Cueto. <em>Demostrando el Teorema de la Curva de Jordan</em>. Manuscrito, 2012.</div>
     </div>
     <br/><div class="cv">
-    <div class="year"></div><div class="paper"><h4>&emsp;Symmetric extensions of polytopes<a class="btn btn-manuscript" href="pdf/symmetric_extension_polytopes.pdf"  role="button">Manuscrito</a></h4></div>
-    <div class="year"></div><div class="paper">J. Tonelli-Cueto. <em>Symmetric extensions of polytopes (Ingl&eacute;s) [Extensiones sim&eacute;tricas de politopos]</em>. Manuscrito, 2015.</div>
-    </div>
-    <br/><div class="cv">
-    <div class="year"></div><div class="paper"><h4>&emsp;Torres de Hanoi<a class="btn btn-manuscript" href="pdf/torres_hanoi.pdf"  role="button">Manuscrito</a></h4></div>
-    <div class="year"></div><div class="paper">A. Gil Lerchundi, E. Landa Cilleros, O. Ruiz Delgado, and J. Tonelli-Cueto. <em>Torres de Hanoi</em>. Manuscrito, 2012.</div>
-    </div>
-    <br/><div class="cv">
     <div class="year"></div><div class="paper"><h4>&emsp;Una aplicaci&oacute;n de la matrices de Householder a la geometr&iacute;a<a class="btn btn-manuscript" href="pdf/aplicacion_householder_geometria.pdf"  role="button">Manuscrito</a></h4></div>
     <div class="year"></div><div class="paper">J. Tonelli-Cueto. <em>Una aplicaci&oacute;n de la matrices de Householder a la geometr&iacute;a</em>. Manuscrito, 2012.</div>
     </div>
-    <br/>
-    <p>
-      La siguiente lista contiene algunos escritos no matem&aacute;ticos que pueden ser de inter&eacute;s para le visitante.
-    </p>
     <br/><div class="cv">
-    <div class="year"></div><div class="paper"><h4>&emsp;Selfinitions<a class="btn btn-manuscript" href="pdf/Selfinitions.pdf"  role="button">Caligramas</a></h4></div>
+    <div class="year"><h4>2011</h4></div><div class="paper"><h4>&emsp;Matriz exponencial y ecuaciones diferenciales<a class="btn btn-manuscript" href="pdf/exponencial_matriz.pdf"  role="button">Manuscrito</a></h4></div>
+    <div class="year"></div><div class="paper">A. Gil Lertxundi, y J. Tonelli-Cueto. <em>Matriz exponencial y ecuaciones diferenciales</em>. Manuscrito, 2011.</div>
+    </div>
+
+    <br/><h3>Escritos literarios</h3>
+    <br/><div class="cv">
+    <div class="year"><h4>2018</h4></div><div class="paper"><h4>&emsp;Selfinitions<a class="btn btn-manuscript" href="pdf/Selfinitions.pdf"  role="button">Caligramas</a></h4></div>
     <div class="year"></div><div class="paper">I. Maesman. <em>Selfinitions (Ingl&eacute;s) [Autoficiones]</em>. Caligramas, 2018.</div>
     </div>
     <br/><div class="cv">
-    <div class="year"></div><div class="paper"><h4>&emsp;¡ROMPEDLAS!<a class="btn btn-manuscript" href="pdf/Rompedlas.pdf"  role="button">Poema</a></h4></div>
-    <div class="year"></div><div class="paper">I. Maesman. <em>¡ROMPEDLAS!</em>. Poema, 2012.</div>
-    </div>
-    <br/><div class="cv">
-    <div class="year"></div><div class="paper"><h4>&emsp;Routine<a class="btn btn-manuscript" href="pdf/Routine.pdf"  role="button">Relato</a></h4></div>
+    <div class="year"><h4>2014</h4></div><div class="paper"><h4>&emsp;Routine<a class="btn btn-manuscript" href="pdf/Routine.pdf"  role="button">Relato</a></h4></div>
     <div class="year"></div><div class="paper">I. Maesman. <em>Routine (Ingl&eacute;s) [Rutina]</em>. Relato, 2014.</div>
     </div>
     <br/><div class="cv">
     <div class="year"></div><div class="paper"><h4>&emsp;Girl in cold<a class="btn btn-manuscript" href="pdf/girl_in_cold.pdf"  role="button">Relato</a></h4></div>
     <div class="year"></div><div class="paper">I. Maesman. <em>Girl in cold (Ingl&eacute;s) [Chica en fr&iacute;o]</em>. Relato, 2014.</div>
     </div>
+    <br/><div class="cv">
+    <div class="year"><h4>2012</h4></div><div class="paper"><h4>&emsp;¡ROMPEDLAS!<a class="btn btn-manuscript" href="pdf/Rompedlas.pdf"  role="button">Poema</a></h4></div>
+    <div class="year"></div><div class="paper">I. Maesman. <em>¡ROMPEDLAS!</em>. Poema, 2012.</div>
+    </div>
+
 
   </div>
 
@@ -328,6 +330,10 @@
        x[i].style="font-size:1em;font-weight:bold;";
       }
     x = document.getElementsByClassName("btn btn-pikasle");
+    for (i = 0; i < x.length; i++) {
+     x[i].style="width:100%;";
+    }
+    x = document.getElementsByClassName("btn btn-blog");
     for (i = 0; i < x.length; i++) {
      x[i].style="width:100%;";
     }
